further work on storage

--- a/Properties/Settings.settings
+++ b/Properties/Settings.settings
@@ -26,5 +26,8 @@
     <Setting Name="currentFilePath" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="audioFolders" Type="System.Collections.Specialized.StringCollection" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
