persistent storage implemented, working on browser

--- a/App.config
+++ b/App.config
@@ -31,6 +31,9 @@
             <setting name="currentFilePath" serializeAs="String">
                 <value />
             </setting>
+            <setting name="audioFolders" serializeAs="String">
+                <value>{}</value>
+            </setting>
         </ReFrameAudio.Properties.Settings>
     </userSettings>
 </configuration>
