updated internal audio player to actually work

--- a/App.config
+++ b/App.config
@@ -34,6 +34,9 @@
             <setting name="audioFolders" serializeAs="String">
                 <value>{}</value>
             </setting>
+            <setting name="lastFile" serializeAs="String">
+                <value />
+            </setting>
         </ReFrameAudio.Properties.Settings>
     </userSettings>
 </configuration>
