added another option for page switching, further improved some functionality

--- a/App.config
+++ b/App.config
@@ -37,6 +37,9 @@
             <setting name="lastFile" serializeAs="String">
                 <value />
             </setting>
+            <setting name="switchPage" serializeAs="String">
+                <value>False</value>
+            </setting>
         </ReFrameAudio.Properties.Settings>
     </userSettings>
 </configuration>
