--- a/Properties/Settings.settings
+++ b/Properties/Settings.settings
@@ -32,5 +32,8 @@
     <Setting Name="lastFile" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="switchPage" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
